db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
---
apiVersion: v1
kind: Service
metadata:
  name: db 
spec:
  ports:
  - port: 3306
  selector:
    app: db
  type: ClusterIP
