web-anuncios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sergiosanchezruiz-webanuncios
spec:
  selector:
    matchLabels:
      app: sergiosanchezruiz-webanuncios
  template:
    metadata:
      labels:
        app: sergiosanchezruiz-webanuncios
    spec:
      containers:
      - name: java
        image: codeurjc/java-webapp-bbdd:v2
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sergiosanchezruiz-webanuncios-service
  labels:
    app: sergiosanchezruiz-webanuncios
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: sergiosanchezruiz-webanuncios-port
  selector:
    app: sergiosanchezruiz-webanuncios
  type: ClusterIP
